src/tests/snapshots/gitu__tests__discard__discard_staged_hunk_while_unstaged_changes.snap
---
source: src/tests/discard.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   initial-file                                                        |
 @@ -1 +1 @@                                                                    |
 -added                                                                         |
 +modified                                                                      |
                                                                                |
 Staged changes (1)                                                             |
 modified   initial-file                                                        |
▌@@ -1 +1 @@                                                                    |
▌-hello                                                                         |
▌\ No ne\ No newline at end of file                                             |
▌+added                                                                         |
                                                                                |
 Recent commits                                                                 |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --reverse --index --recount                                         |
error: initial-file: does not match index                                       |
! 'git apply --reverse --index --recount' exited with code: 1                   |
styles_hash: 95d0e1584389e06b
