src/tests/snapshots/gitu__tests__discard__discard_unstaged_hunk.snap
---
source: src/tests/discard.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Recent commits                                                                 |
 4f3ed19 main add file-one                                                      |
▌b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --reverse --recount                                                 |
styles_hash: 6a5b40446d586a71
