src/tests/snapshots/gitu__tests__discard__discard_untracked_file.snap
---
source: src/tests/discard.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Recent commits                                                                 |
▌b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git clean --force some-file                                                   |
Removing some-file                                                              |
styles_hash: caa2394438232d0c
